Optimize LCP: Preload Hero image from public folder

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ayisha Muneer | Digital Marketing Expert</title>
+  <link rel="preload" as="image" href="/assets/pic1.webp" fetchpriority="high">
 </head>
 
 <body>
