--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ayisha Muneer | Digital Marketing Expert</title>
+  <title>Digital Marketing Strategist in Dubai - SEO Expert</title>
+  <meta name="description"
+    content="Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE. Book free consultation.">
   <link rel="preload" as="image" href="/assets/pic1.webp" fetchpriority="high">
 </head>
 
