SEO: Add comprehensive meta tags, canonical URL, Open Graph, Twitter Cards, and JSON-LD structured data

--- a/index.html
+++ b/index.html
@@ -42,9 +42,134 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary SEO Meta Tags -->
   <title>Digital Marketing Strategist in Dubai - SEO Expert</title>
   <meta name="description"
     content="Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE. Book free consultation.">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.ayishamuneer.com/" />
+
+  <!-- Robots Meta Tags -->
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="googlebot" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+
+  <!-- Additional SEO Meta -->
+  <meta name="author" content="Ayisha Muneer" />
+  <meta name="language" content="English" />
+  <meta name="geo.region" content="AE-DU" />
+  <meta name="geo.placename" content="Dubai" />
+  <meta name="geo.position" content="25.2048;55.2708" />
+  <meta name="ICBM" content="25.2048, 55.2708" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.ayishamuneer.com/" />
+  <meta property="og:title" content="Digital Marketing Strategist in Dubai - SEO Expert" />
+  <meta property="og:description"
+    content="Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE. Book free consultation." />
+  <meta property="og:image" content="https://www.ayishamuneer.com/assets/pic1.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="Ayisha Muneer - Digital Marketing Strategist" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://www.ayishamuneer.com/" />
+  <meta name="twitter:title" content="Digital Marketing Strategist in Dubai - SEO Expert" />
+  <meta name="twitter:description"
+    content="Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE." />
+  <meta name="twitter:image" content="https://www.ayishamuneer.com/assets/pic1.webp" />
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Person",
+        "name": "Ayisha Muneer",
+        "url": "https://www.ayishamuneer.com",
+        "image": "https://www.ayishamuneer.com/assets/pic1.webp",
+        "jobTitle": "Digital Marketing Strategist",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Ayisha Muneer Digital Marketing"
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "147, Emarat Atrium, 1st Floor, Sheikh Zayed Road",
+          "addressLocality": "Dubai",
+          "addressCountry": "AE"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/in/ayishamuneer/",
+          "https://www.instagram.com/brandingbysha"
+        ]
+      },
+      {
+        "@type": "LocalBusiness",
+        "name": "Ayisha Muneer - Digital Marketing Strategist in Dubai",
+        "image": "https://www.ayishamuneer.com/assets/pic1.webp",
+        "description": "Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation.",
+        "url": "https://www.ayishamuneer.com",
+        "telephone": "+971543491544",
+        "email": "ayishamuneer4342@gmail.com",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "147, Emarat Atrium, 1st Floor, Sheikh Zayed Road",
+          "addressLocality": "Dubai",
+          "addressRegion": "Dubai",
+          "addressCountry": "AE"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "25.2048",
+          "longitude": "55.2708"
+        },
+        "priceRange": "$$",
+        "areaServed": {
+          "@type": "City",
+          "name": "Dubai"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/in/ayishamuneer/",
+          "https://www.instagram.com/brandingbysha"
+        ]
+      },
+      {
+        "@type": "WebSite",
+        "name": "Ayisha Muneer - Digital Marketing Strategist",
+        "url": "https://www.ayishamuneer.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://www.ayishamuneer.com/blog?search={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      },
+      {
+        "@type": "Organization",
+        "name": "Ayisha Muneer Digital Marketing",
+        "url": "https://www.ayishamuneer.com",
+        "logo": "https://www.ayishamuneer.com/logo.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+971543491544",
+          "contactType": "Customer Service",
+          "areaServed": "AE",
+          "availableLanguage": "English"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/in/ayishamuneer/",
+          "https://www.instagram.com/brandingbysha"
+        ]
+      }
+    ]
+  }
+  </script>
+
   <link rel="preload" as="image" href="/assets/pic1.webp" fetchpriority="high">
 </head>
 
