--- a/index.html
+++ b/index.html
@@ -185,6 +185,43 @@
         style="width:100%;height:100%;object-fit:cover;object-position:top;" width="448" height="597"
         fetchpriority="high" loading="eager" decoding="async">
     </div>
+
+    <!-- Static SEO Content (visible to crawlers, hidden when React loads) -->
+    <noscript>
+      <div
+        style="max-width:1200px;margin:0 auto;padding:2rem;font-family:system-ui,-apple-system,sans-serif;color:#1e293b;">
+        <header style="margin-bottom:3rem;">
+          <h1 style="font-size:2.5rem;font-weight:bold;color:#0f172a;margin-bottom:1rem;">Ayisha Muneer - Digital
+            Marketing Strategist in Dubai, UAE</h1>
+          <p style="font-size:1.25rem;color:#475569;line-height:1.75;">Award-winning Digital Marketing Strategist
+            helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE.</p>
+        </header>
+
+        <section style="margin-bottom:3rem;">
+          <h2 style="font-size:2rem;font-weight:bold;color:#0f172a;margin-bottom:1.5rem;">Services</h2>
+          <ul style="list-style:disc;padding-left:2rem;color:#475569;line-height:1.75;">
+            <li>Social Media Marketing - Build a community that converts with strategic content and campaigns</li>
+            <li>Paid Advertising - Make every dirham work harder through targeted Meta, Google & LinkedIn campaigns</li>
+            <li>Content Marketing - Turn your expertise into content that educates and builds trust</li>
+            <li>Email Marketing - Convert subscribers into repeat customers with automated journeys</li>
+            <li>Web Design - Transform your website into your best salesperson</li>
+            <li>Marketing Strategy & Consulting - Get a clear, actionable roadmap to grow</li>
+            <li>WhatsApp & Marketing Automation - Engage customers instantly with personalized automations</li>
+            <li>Lead Generation & Sales Conversion - Drive high-quality leads and optimize your sales funnel</li>
+            <li>AI Integration - Streamline your marketing with cutting-edge AI tools</li>
+          </ul>
+        </section>
+
+        <section style="margin-bottom:3rem;">
+          <h2 style="font-size:2rem;font-weight:bold;color:#0f172a;margin-bottom:1.5rem;">Contact</h2>
+          <p style="color:#475569;line-height:1.75;">
+            <strong>Location:</strong> 147, Emarat Atrium, 1st Floor, Sheikh Zayed Road, Dubai<br>
+            <strong>Phone:</strong> +971 54 349 1544<br>
+            <strong>Email:</strong> ayishamuneer4342@gmail.com
+          </p>
+        </section>
+      </div>
+    </noscript>
   </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
