SEO: Optimize H1, meta tags with LSI keywords (SEO consultant, performance marketing, lead generation)

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary SEO Meta Tags -->
-  <title>Digital Marketing Strategist in Dubai - SEO Expert</title>
+  <title>Digital Marketing Strategist in Dubai, UAE | SEO, PPC & Growth Expert</title>
   <meta name="description"
-    content="Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE. Book free consultation.">
+    content="Expert Digital Marketing Strategist in Dubai specializing in SEO, Google Ads, Meta Ads, lead generation & performance marketing. Helping UAE businesses grow online with data-driven strategies. Book free consultation.">
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.ayishamuneer.com/" />
@@ -66,9 +66,9 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.ayishamuneer.com/" />
-  <meta property="og:title" content="Digital Marketing Strategist in Dubai - SEO Expert" />
+  <meta property="og:title" content="Digital Marketing Strategist in Dubai, UAE | SEO, PPC & Growth Expert" />
   <meta property="og:description"
-    content="Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE. Book free consultation." />
+    content="Expert Digital Marketing Strategist in Dubai specializing in SEO, Google Ads, Meta Ads, lead generation & performance marketing. Helping UAE businesses grow online." />
   <meta property="og:image" content="https://www.ayishamuneer.com/assets/pic1.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -78,9 +78,9 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://www.ayishamuneer.com/" />
-  <meta name="twitter:title" content="Digital Marketing Strategist in Dubai - SEO Expert" />
+  <meta name="twitter:title" content="Digital Marketing Strategist in Dubai, UAE | SEO, PPC & Growth Expert" />
   <meta name="twitter:description"
-    content="Award-winning Digital Marketing Strategist in Dubai helping businesses scale with SEO, paid ads, content & automation. 50+ clients in UAE." />
+    content="Expert Digital Marketing Strategist specializing in SEO, Google Ads, Meta Ads & lead generation. Helping UAE businesses grow online." />
   <meta name="twitter:image" content="https://www.ayishamuneer.com/assets/pic1.webp" />
 
   <!-- JSON-LD Structured Data -->
